--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=2.3.4
 author=Evgeny Shemanuev, RemoteXY
 maintainer=RemoteXY <info@remotexy.com>
 sentence=For all RemoteXY projects.
-paragraph=This library is part of a large RemoteXY project.<br />RemoteXY allows you to control your device using an Android or iOS smartphone using Bluetooth, WiFi, Ethernet, Cloud.
+paragraph=The library is part of the RemoteXY project.<br />RemoteXY allows you to control your device using an Android or iOS smartphone. There are Bluetooth, WiFi, Ethernet or Cloud server can be used for connection. To make GUI go to the web site http://remotexy.com
 category=Communication
 url=http://remotexy.com/en/help/
 architectures=*
