--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=3.1.14
 author=Evgeny Shemanuev, RemoteXY
 maintainer=RemoteXY <info@remotexy.com>
 sentence=For all RemoteXY projects.
-paragraph=The library is part of the RemoteXY project.<br />RemoteXY allows you to control your device using an Android or iOS smartphone. There are Bluetooth, USB OTG, WiFi, Ethernet or Cloud server can be used for connection. To make GUI go to the web site http://remotexy.com
+paragraph=RemoteXY allows you to control the board from Android or iOS phones and tablets using a graphical user interface. You can use Bluetooth, USB OTG, WiFi, Ethernet or a cloud server to connect. To create a GUI, go to http://remotexy.com
 category=Communication
 url=http://remotexy.com/en/help/
 architectures=*
