--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=RemoteXY
-version=3.1.14
-author=Evgeny Shemanuev, RemoteXY
+version=4.1.2
+author=Evgenii Shemanuev, RemoteXY
 maintainer=RemoteXY <info@remotexy.com>
 sentence=For all RemoteXY projects.
 paragraph=RemoteXY allows you to control the board from Android or iOS phones and tablets using a graphical user interface. You can use Bluetooth, USB OTG, WiFi, Ethernet or a cloud server to connect. To create a GUI, go to http://remotexy.com
